<resources>
    <string name="app_name">Trip Planner Pro</string>
    <string name="history">History</string>
    <string name="home">Home</string>
    <string name="account">Account</string>
    <string name="sync">Sync</string>
    <string name="add_button">add button</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="addTrip">Add Trip</string>
    <string name="nameOfTrip">Name Of Trip</string>
    <string name="startPointOfTrip">Start Point Of Trip</string>
    <string name="endPointOfTrip">End Point Of Trip</string>
    <string name="selectTime">Select Time</string>
    <string name="selectData">Select Date</string>
    <string name="addNotes">Add Notes</string>
    <string name="add_note">Add Note</string>
    <string name="add_your_note">Add your Note</string>
    <string name="no_data_found">No Data Found</string>
    <string name="swipe_to_delete">Swipe to Delete</string>
    <string name="direction">Direction</string>
    <string name="repetition">Repetition</string>
    <string name="save">Save</string>
    <string name="add_this_trip">Add This Trip</string>
    <string name="passwordsNotMatch">Password not match!</string>
    <string name="warnOfDomainInvaild">Domain Invaild!</string>
    <string name="warnOfEmptyEmail">Please enter email!</string>
    <string name="warnOfEmptyPassword">Please enter password!</string>
    <string name="warnOfEmptyConfirmPassword">Please enter confirm password!</string>
    <string name="weakPassword">"Weak Password!"</string>
    <string name="invaildEmail">"Invaild Email"</string>
    <string name="userExist">"User Exist"</string>
    <string name="warnEmailNotExist">"Email not exist!"</string>
    <string name="wrongPassword">"Wrong Password!"</string>
    <string name="reset_password">"Reset Password"</string>
    <string name="resend_verification_email">"Resend Verification Email"</string>
    <string name="facebook_app_id">458223138922401</string>
    <string name="fb_login_protocol_scheme">fb458223138922401</string>
    <string name="email">Enter Your Email</string>
    <string name="password">Enter Your Password</string>
    <string name="cancel">cancel</string>
    <string name="confirm">confirm</string>
    <string name="log_out">Log out</string>
    <string name="mapbox_access_token">pk.eyJ1IjoiYWhtZWRhbGFhNDA4MCIsImEiOiJja2p6cm14NGgwYWdyMnZtbnEyYTk3aGhtIn0.cwRiYcb51gET_KdP-PTc-w</string>
    <string name="update_this_trip">Update This Trip</string>
    <string name="update_notes">Update Notes</string>


</resources>