<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/home"
        android:title="@string/home"
        android:icon="@drawable/home"
        app:showAsAction="always"/>
    <item android:id="@+id/history"
        android:title="@string/history"
        android:icon="@drawable/history"
        app:showAsAction="always"/>
    <item android:title=" "/>
    <item android:id="@+id/account"
        android:title="@string/account"
        android:icon="@drawable/account_circle"
        app:showAsAction="always"/>
    <item
        android:title="@string/sync"
        android:id="@+id/sync"
        android:icon="@drawable/sync"
        app:showAsAction="always"/>
</menu>